README: the Go and Java one-liners match the per-language pages
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>